[gd_scene load_steps=9 format=3 uid="uid://fuj2xt1sh8nm"]

[ext_resource type="Script" path="res://hud.gd" id="1_o8fq7"]
[ext_resource type="Theme" uid="uid://c2t22owqfyns8" path="res://theme.tres" id="2_hq42y"]
[ext_resource type="Texture2D" uid="uid://dvwxod1u8jtnl" path="res://addons/kenney_crosshair_pack/crosshair001.png" id="3_kl6mr"]
[ext_resource type="Theme" uid="uid://dvqwgv7i0cjg" path="res://theme_smallfont_2x.tres" id="3_ok57h"]

[sub_resource type="Gradient" id="Gradient_q7tnt"]
colors = PackedColorArray(0.0901961, 0.0627451, 0.0588235, 1, 0.0706842, 0.0527823, 0.0349736, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_naf2n"]
gradient = SubResource("Gradient_q7tnt")
width = 1
height = 128
fill_to = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_kqqof"]
colors = PackedColorArray(0.0901961, 0.0627451, 0.0588235, 1, 0.407843, 0.345098, 0.282353, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ukfu3"]
gradient = SubResource("Gradient_kqqof")
width = 32
height = 32
fill_to = Vector2(0, 1)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_o8fq7")

[node name="HUDTexts" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="SystemReset" type="RichTextLabel" parent="HUDTexts"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(350, 50)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_hq42y")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
bbcode_enabled = true
text = "[center]SYSTEM RESET[/center]"

[node name="VBoxContainer_Selected" type="VBoxContainer" parent="HUDTexts"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 104.0
grow_horizontal = 2

[node name="SelectedStar" type="RichTextLabel" parent="HUDTexts/VBoxContainer_Selected"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 50)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2_hq42y")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
bbcode_enabled = true

[node name="SelectedPlanet" type="RichTextLabel" parent="HUDTexts/VBoxContainer_Selected"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 50)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2_hq42y")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
bbcode_enabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="HUDTexts"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -104.0
grow_horizontal = 2
grow_vertical = 0
alignment = 2

[node name="FCSStatus" type="RichTextLabel" parent="HUDTexts/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 50)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2_hq42y")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
bbcode_enabled = true
text = "[right]INITIALIZED[/right]"

[node name="HUDRim" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Left" type="TextureRect" parent="HUDRim"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 32.0
grow_vertical = 2
texture = SubResource("GradientTexture2D_naf2n")

[node name="Right" type="TextureRect" parent="HUDRim"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
grow_horizontal = 0
grow_vertical = 2
texture = SubResource("GradientTexture2D_naf2n")
flip_h = true

[node name="Top" type="TextureRect" parent="HUDRim"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2
texture = SubResource("GradientTexture2D_ukfu3")

[node name="HBoxContainer" type="HBoxContainer" parent="HUDRim/Top"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -16.0
offset_right = 903.0
offset_bottom = 16.0
grow_vertical = 2
mouse_filter = 2

[node name="EpocLabel" type="RichTextLabel" parent="HUDRim/Top/HBoxContainer"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(190, 10)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2
theme = ExtResource("3_ok57h")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
text = "EPOC 6012 & 0000.000.000"
scroll_active = false

[node name="VSeparator" type="VSeparator" parent="HUDRim/Top/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="MenuLabel" type="RichTextLabel" parent="HUDRim/Top/HBoxContainer"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(406, 10)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme = ExtResource("3_ok57h")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
text = "6\\set remote 7\\start vima 8\\set local  9\\deploy sur"
scroll_active = false
autowrap_mode = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="HUDRim/Top"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -903.0
offset_top = -16.0
offset_right = -5.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
alignment = 2

[node name="NumBodies" type="RichTextLabel" parent="HUDRim/Top/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 10)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme = ExtResource("3_ok57h")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
bbcode_enabled = true

[node name="Bottom" type="TextureRect" parent="HUDRim"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -32.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("GradientTexture2D_ukfu3")
flip_v = true

[node name="HBoxContainer" type="HBoxContainer" parent="HUDRim/Bottom"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -16.0
offset_right = 1119.0
offset_bottom = 16.0
grow_vertical = 2
mouse_filter = 2

[node name="EnvironmentLabel" type="RichTextLabel" parent="HUDRim/Bottom/HBoxContainer"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(598, 10)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme = ExtResource("3_ok57h")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
text = "GRAVITY 1.000 FG & TEMPERATURE +15.0@c & PRESSURE 1.000 ATM & PULSE 120 PPS"
scroll_active = false
autowrap_mode = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="HUDRim/Bottom"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1119.0
offset_top = -16.0
offset_right = -5.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
alignment = 2

[node name="ParsisLabel" type="RichTextLabel" parent="HUDRim/Bottom/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 10)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme = ExtResource("3_ok57h")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
bbcode_enabled = true
text = "[center]Parsis: x=1000, y=123, z=-123[/center]"

[node name="APTarget" type="RichTextLabel" parent="HUDRim/Bottom/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 10)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme = ExtResource("3_ok57h")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
bbcode_enabled = true

[node name="Aimpoint" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(64, 64)
texture = ExtResource("3_kl6mr")

[node name="Help" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2

[node name="HelpBackground" type="TextureRect" parent="Help"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_naf2n")
expand_mode = 2

[node name="HelpTextContainer" type="Control" parent="Help"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 32.0
offset_bottom = 532.0
grow_horizontal = 2

[node name="HelpText" type="RichTextLabel" parent="Help/HelpTextContainer"]
clip_contents = false
custom_minimum_size = Vector2(1760, 10)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2
theme = ExtResource("3_ok57h")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
bbcode_enabled = true
text = "[center]System Reset[/center]

[center]Modified version of Noctis IV - a program made by Alessandro Ghignola.[/center]


---Controls---

(note: all of these controls can be modified in the Godot project settings - if modified, changes are not reflected here!! (TODO))

W/A/S/D - move

Space - jump

ALT - (re)capture mouse

F1 - help

F2 - load game

F3 - save game

F10 - toggle HUD

F11 - toggle CRT shader effect

F12 - toggle debug tools



Stardrifter on-board menu controls

Main menu:

1 - Flight control drive

2 - Onboard Devices

3 - Preferences

4 - Disable display

Display navigation:

6 - Activate menu command 1

7 - Activate menu command 2

8 - Activate menu command 3

9 - Activate menu command 4
"
scroll_active = false
